                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 22-08-2005 updated: Italian language file (Thnx to kotix)
 - 22-08-2005 updated: Dutch language file (Thnx to nightspirit)
 - 22-08-2005 updated: Norwegian language file (Thnx to vnm)
 - 22-08-2005 updated: German language file
 - 21-08-2005 fixed: Font renderers. Long strings (such as RSS feeds) would crash xbmc.
 - 21-08-2005 fixed: File Manager will start playlist files (m3u, b4s, pls, strm, wpl)
 - 21-08-2005 added: Short crossfade on manual trackchange/skip if crossfading is enabled.
 - 21-08-2005 added: Option to en-/disable albumtrack crossfading if crossfading is enabled. (files must be properly tagged with albumtitle and tracknrs and must be scanned or id3 option enabled)
 - 21-08-2005 added: setting to enable/disable how items starting with "The" are sorted in Music and Video
 - 21-08-2005 fixed: Stacking
 - 20-08-2005 added: ability to jump into the library view at specific locations using "genres", "artists", "albums", "songs",
              "top100songs", "top100albums", or "recentalbums" in xbmc.activatewindow() as the destination parameter
              ex: xbmc.activatewindow(mymusiclibrary,top100albums)
 - 20-08-2005 added: option to hide file names in thumbs view in My Pictures
 - 20-08-2005 fixed: HTTPAPI: when playing a stream GetCurrentlyPlaying could cause problems later
 - 20-08-2005 fixed: After reloading or changing skins playing music or switching from fullscreenvideo to gui would crash
 - 20-08-2005 fixed: Local Empty folders was not open able [GeminiServer]
 - 20-08-2005 added: System Info: System Uptime [GeminiServer]